Add configurable question pack admin
